# sfsm

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  README.rst
examples/: README.md  basic.rs  basic_extended.rs  fallible.rs  hierarchical_extended.rs  hierarchical_simple.rs  messages.rs  rocket_liftoff.rs  tracing.rs
sfsm-base/: Cargo.toml  README.md
sfsm-base/src/: fallible.rs  lib.rs  message.rs  non_fallible.rs
sfsm-proc/: Cargo.toml  README.md
sfsm-proc/src/: generators.rs  lib.rs  parsers.rs  trace.rs  types.rs
src/: lib.rs
