[package]
name = "sfsm"
version = "0.2.8"
authors = ["Samuel Schuepbach <schuepbs@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["static", "state-machine", "no_std", "embedded"]
repository = "https://gitlab.com/sfsm/sfsm"
description = "Generate static state machines"

[workspace]
members = ["sfsm-base", "sfsm-proc"]


[dependencies]
sfsm-proc = {path = "sfsm-proc", version = "0.3.0"}
sfsm-base = {path = "sfsm-base", version = "0.3.0"}


[[example]]
name = "basic"
panic = "abort"