[package]
name = "sfsm"
version = "0.4.2"
authors = ["Samuel Schuepbach <schuepbs@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["static", "state-machine", "no_std", "embedded"]
repository = "https://gitlab.com/sfsm/sfsm"
description = "Generate static state machines"

[workspace]
members = ["sfsm-base", "sfsm-proc"]

[dependencies]
sfsm-proc = {path = "sfsm-proc", version = "0.4.2", default-features = false}
sfsm-base = {path = "sfsm-base", version = "0.4.2"}

[features]
trace = ["sfsm-proc/trace"]
trace-steps = ["sfsm-proc/trace-steps"]
trace-messages = ["sfsm-proc/trace-messages"]

[[example]]
name = "tracing"
required-features = ["trace"]
